--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,9 @@
+/*
+
+Styling-inspirasjon og fonter fra 
+
+*/
+
 @font-face {
   font-family: TID;
   src: url(../fonts/TID-Regular.ttf);
@@ -41,6 +47,10 @@ body {
   font-family: TID, sans-serif;
   background: rgba(0, 0, 0, 0.918);
   color: #fff;
+}
+
+.App {
+  text-align: center;
 }
 
 .container {
