--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,9 @@
 /*
 
-Styling-inspirasjon og fonter fra 
+Styling-inspirasjon og fonter fra Ruter sine infoskjermer som kan opprettes på link:
+http://mon.ruter.no
+Fonter hentet fra:
+https://brand.ruter.no
 
 */
 
